--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "php-http/multipart-stream-builder": "^1.0",
     "php-http/client-common": "^2.0",
     "php-http/message": "^1.7",
-    "guzzlehttp/psr7": "^1.0"
+    "guzzlehttp/psr7": "^1.0 || ^2.0"
   },
   "require-dev": {
     "php-http/mock-client": "^1.0",
